services/platform/push/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: push
  labels:
    app.kubernetes.io/name: push
    app.kubernetes.io/part-of: observability
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: push
  ports:
    - name: http
      port: 80
      targetPort: http
